--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,57 @@
-# This .gitignore is appropriate for repositories deployed to GitHub Pages and using
-# a Gemfile as specified at https://github.com/github/pages-gem#conventional
+# sphinx build folder
+_build
 
-# Basic Jekyll gitignores (synchronize to Jekyll.gitignore)
-_site/
-.sass-cache/
-.jekyll-cache/
-.jekyll-metadata
+# IDE files #
+.idea
+*.xml
+*.iml
+.vscode
 
-# Additional Ruby/bundler ignore for when you run: bundle install
-/vendor
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
 
-# Specific ignore for GitHub Pages
-# GitHub Pages will always use its own deployed version of pages-gem 
-# This means GitHub Pages will NOT use your Gemfile.lock and therefore it is
-# counterproductive to check this file into the repository.
-# Details at https://github.com/github/pages-gem/issues/768
-Gemfile.lock
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store*
+ehthumbs.db
+Icon?
+!/docs/_static/images/icons
+Thumbs.db
+
+# Editor backup files #
+#######################
+*~
+
+# Draw.io backup files #
+########################
+*.drawio.bkp
+*.dtmp
+
+# virtualenv files #
+####################
+venv
+venv/*
